--- a/addTask.html
+++ b/addTask.html
@@ -13,9 +13,9 @@
     width: 100%;
     display: inline-block;
     color: red;
-    text-decoration: Arial;
     text-align: center;
     padding: 17px 19px;
+    text-decoration: Arial;
     font-size: 20px;
     font-style: Bold;
     border-top: 1px solid;
@@ -33,17 +33,31 @@
       {% if user %}
       <p>Welcome {{ welcome }} {{ user.email() }}</p>
       <div class="nav">
-        <a href="/taskBoard"><u>TASKS BOARD</u></a>
-        <br>
-        <a href="/addTaskBoard"><u>ADD TASK BOARD</u></a>
+        <a href="/"><u>TASKS BOARD</u></a>
       </div>
       {% else %}
       <p>Welcome to the application </p>
       <div class="nav">
       </div>
       {% endif %}
-      <a href="/"><u>BACK</u></a>
       <br>
+      <form action='/add' method='post'>
+        <table>
+          <caption><center>Create New Task</center></caption>
+            <tr>
+              <td><br></td>
+            </tr>
+            <tr>
+              <td>Name:</td>
+              <td><input type='text'/required></td>
+            </tr>
+            <tr><td><br></td></tr>
+            <tr>
+              <td><input type="submit" value="Add" id="addButton" name="Add"></td>
+              <td><input type="reset" value="Reset" id="reset" name="Reset"></td>
+            </tr>
+        </table>
+      </form>
       <p>you can {{ url_string }} <a href='{{ url }}'>here</a></p>
     </div>
   </center>
