--- a/addTask.html
+++ b/addTask.html
@@ -33,7 +33,16 @@
       {% if user %}
       <p>Welcome {{ welcome }} {{ user.email() }}</p>
       <div class="nav">
-        <a href="/"><u>TASKS BOARD</u></a>
+        <table>
+          <tr>
+            <td style="width:100px;">
+              <a href="/"><u>HOME</u></a>
+            </td>
+            <td>
+              <a href="/taskBoard"><u>TASKS BOARD</u></a>
+            </td>
+          </tr>
+        </table>
       </div>
       {% else %}
       <p>Welcome to the application </p>
@@ -41,7 +50,8 @@
       </div>
       {% endif %}
       <br>
-      <form action='/add' method='post'>
+      <br><hr style="height: 1px;color: red;background-color: red;border: none;"><br>
+      <form action='/addTask?taskBoarddata={{ data.taskBoarddata }}&email={{ data.owner }}' method='post'>
         <table>
           <caption><center>Create New Task</center></caption>
             <tr>
@@ -49,7 +59,11 @@
             </tr>
             <tr>
               <td>Name:</td>
-              <td><input type='text'/required></td>
+              <td><input type='text' name='TaskName' /required></td>
+            </tr>
+            <tr>
+              <td>Due_Date:</td>
+              <td><input type='date' name='Due_Date' /required></td>
             </tr>
             <tr><td><br></td></tr>
             <tr>
@@ -58,6 +72,8 @@
             </tr>
         </table>
       </form>
+      <br><hr style="height: 1px;color: red;background-color: red;border: none;"><br>
+      <a href="/"><u>BACK</u></a><br>
       <p>you can {{ url_string }} <a href='{{ url }}'>here</a></p>
     </div>
   </center>
