--- a/addTaskBoard.html
+++ b/addTaskBoard.html
@@ -33,14 +33,26 @@
       {% if user %}
       <p>Welcome {{ welcome }} {{ user.email() }}</p>
       <div class="nav">
-        <a href="/"><u>TASKS BOARD</u></a>
+        <center>
+        <table>
+          <tr>
+            <td style="width:100px;">
+              <a href="/"><u>HOME</u></a>
+            </td>
+            <td>
+              <a href="/taskBoard"><u>TASKS BOARD</u></a>
+            </td>
+          </tr>
+        </table>
+        <br>
+      <p>you can {{ url_string }} <a href='{{ url }}'>here</a></p>
+      </center>
       </div>
       {% else %}
       <p>Welcome to the application </p>
-      <div class="nav">
-      </div>
       {% endif %}
       <br>
+      <br><hr style="height: 1px;color: red;background-color: red;border: none;"><br>
       <form action='/addTaskBoard' method='post'>
         <table>
           <caption><center>Create New Task Board</center></caption>
@@ -58,7 +70,7 @@
             </tr>
         </table>
       </form>
-      <p>you can {{ url_string }} <a href='{{ url }}'>here</a></p>
+      <br><hr style="height: 1px;color: red;background-color: red;border: none;"><br>
     </div>
   </center>
 </body>
