--- a/editTask.html
+++ b/editTask.html
@@ -50,7 +50,7 @@
       <p>Welcome to the application </p>{% endif %}
       <br>
       <br><hr style="height: 1px;color: red;background-color: red;border: none;"><br>
-      <form action='/editTask?taskBoarddata={{ taskboard_data.taskBoarddata }}&email={{ taskboard_data.owner }}' method='post'>
+      <form action='/editTask?taskBoarddata={{ taskboard_data.taskBoarddata }}&email={{ taskboard_data.owner }}&TaskOldName={{ taskdata[0] }}' method='post'>
         <table>
           <caption><center>Edit Task</center></caption>
             <tr>
@@ -58,15 +58,15 @@
             </tr>
             <tr>
               <td>Task Name:</td>
-              <td><input type='text' name='TaskName' value="{{ taskdata[0] }}" /required></td>
+              <td><input type='text' name='TaskNewName' value="{{ taskdata[0] }}" /required></td>
             </tr>
             <tr>
               <td>Due_Date:</td>
-              <td><input type='date' name='Due_Date' value="{{ taskdata[1] }}" /required></td>
+              <td><input type='date' name='TaskNewDue_Date' value="{{ taskdata[1] }}" /required></td>
             </tr>
             <tr><td><br></td></tr>
             <tr>
-              <td><input type="submit" id="editButton" name="submit" value="Edit"></td>
+              <td><input type="submit" name="submit" value="Edit"></td>
               <td><input type="reset"></td>
             </tr>
         </table>
